Retargeted links that moved from S06 to S02.
git-svn-id: http://svn.pugscode.org/pugs@14934 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
+++ b/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
@@ -86,7 +86,7 @@ Class-specific operations
 
 Classes
 
-See also: S06:Built-in Types
+See also: S02:Built-in Data Types
 
 Native types
 
@@ -110,7 +110,7 @@ Array
 Hash
 ...
 
-Other types - See S06
+Other types - See S02
 
 Value types, Implementation types, Hierarchical types, Polymorphic types, Parameter types, Generic types, Return types
 
